# CATENets

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  requirements_dev.txt  run_experiments.py  run_experiments_AISTATS.py  run_experiments_benchmarks_NeurIPS.py  run_experiments_inductive_bias.py  run_experiments_inductive_bias_NeurIPS.py  setup.cfg  setup.py
.github/workflows/: test.yml
catenets/datasets/: __init__.py  dataset_acic2016.py  dataset_ihdp.py  dataset_twins.py  network.py
catenets/experiment_utils/: base.py  simulation_utils.py  tester.py
catenets/experiments/: experiment_utils.py  ihdp_experiments.py  simulation_utils.py  simulations_AISTATS.py
catenets/experiments/jax/: experiment_utils.py  simulations_AISTATS.py
catenets/experiments/torch/: metrics.py  tester.py
catenets/models/: __init__.py  base.py  constants.py  disentangled_nets.py  flextenet.py  model_utils.py  offsetnet.py  pseudo_outcome_nets.py  representation_nets.py  snet.py  tnet.py  transformation_utils.py  twostep_nets.py  xnet.py
catenets/models/jax/: __init__.py  base.py  disentangled_nets.py  flextenet.py  model_utils.py  offsetnet.py  pseudo_outcome_nets.py  representation_nets.py  rnet.py  snet.py  tnet.py  xnet.py
catenets/models/torch/: __init__.py  base.py  flextenet.py  metrics.py  model_utils.py  pseudo_outcome_nets.py  representation_nets.py  slearner.py  snet.py  tarnet.py  tlearner.py  tnet.py  weight_utils.py
docs/: Makefile  api.rst  conf.py  datasets.rst  index.rst  installing.rst  jax_models.rst  requirements.txt  torch_models.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
experiments/experiments_AISTATS21/: ihdp_experiments.py  simulations_AISTATS.py
experiments/experiments_benchmarks_NeurIPS21/: README.md  README.txt  acic_experiments_catenets.py  acic_experiments_grf.R  ihdp_experiments_catenets.py  ihdp_experiments_grf.R  twins_experiments_catenets.py  twins_experiments_grf.R
experiments/experiments_inductive_bias/: experiments_AB.py  experiments_CD.py
experiments/experiments_inductivebias_NeurIPS21/: experiments_AB.py  experiments_CD.py  experiments_acic.py  experiments_twins.py
source/: conf.py
tests/: conftest.py
tests/datasets/: test_datasets.py
tests/models/: test_ite.py  test_model_utils.py  test_regression.py
tests/models/jax/: test_jax_ite.py  test_jax_model_utils.py  test_jax_regression.py  (+1 more)
(+14 files in other folders)
