[metadata]
name = catenets
author = Alicia Curth
author_email = amc253@cam.ac.uk
description = Conditional Average Treatment Effect Estimation Using Neural Networks
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
# Add here related links, for example:
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =.

python_requires = >=3.7

install_requires =
    gdown
    jax>=0.3.16
    jaxlib>=0.3.14; sys_platform != 'win32'
    loguru>=0.5.3
    numpy>=1.20
    pandas>=1.3 ; python_version>="3.8"
    pandas<=1.3.5 ; python_version=="3.7"
    pytest>=6.2.4
    requests
    scikit_learn>=0.24.2
    scipy>=1.2
    torch>=1.9
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = .
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    bandit
    black
    catboost
    flake8
    pre-commit
    pytest
    xgboost
    setuptools
    pytest
    pytest-cov
    jupyter
    notebook
    py # pytest 7.2.0 bug https://github.com/pytest-dev/pytest-xprocess/issues/110

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
markers =
     slow: mark tests as slow (deselect with '-m "not slow"')

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = catenets
extensions =
    pre_commit
